[package]
name = "wasm"
version = "0.1.0"
authors = ["KhemPoudel <me.khempoudel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2.34"
rand = "0.5.5"
